Changes 3.5.0
=============

- Update to CI 3.1.4
- UI with Vue & Bootstrap
- Models: Filemanager, Mediatable removed and replaced with Assets
- DB: FlexyAdmin db-> extensions depricated, and standard not loaded.
- Rewrite data->find()
- data->path() renamed to data->tree()
- URL: /admin changed to /_admin
- URL: /file/... changed to /_media/...
- DB: res_media_files removed and replaced with res_assets
- DB: removed almast all cfg_ tables
- DB: removed res_menu_result
- Removed plugin_auto_menu (total rewrite, see site/config/menu.php for new options)
- Cronjob uses models (method index) instead of libraries

Changes 3.4.x
=============

- Update to CI 3.1.3
- Safe folder structure
- Ready for PHP7
- Tested with SSL Cerfiticates


Changes 3.3.0
=============

- Update to CI 3.1.2
- Split Userguide in andere repo
- Mogelijk om FlexyAdmin te installeren in submap


Changes 3.2.1 (3750)
=======================

- Update to CI 3.1.0


Changes 3.2.0 (3654)
=======================

Breaking changes if you uses ->user or ->ion_auth:
- Update to latest IonAuth.
- Removed ->user library
- Replaced with ->flexy_auth library


Changes 3.1.2 (3630)
=======================

Breaking changes (if you used Crud):
- Model ->crud-> removed.
- Crud Models removed (cfg_users,cfg_email,cfg_admin_menu)

Breaking changes (if you used data_model):
- Renamed 'Data_Model' to 'Data'
- Changed 'Data' relations system and naming to make it more flexibel
- Removed ->with_grouped()
- Added ->with_json()


Changes 3.0.7 (3592...)
=======================

- CodeIgniter 3.0.6
- Language kan nu ook door ?lang= ingesteld worden


Changes 3.0.6 (3518...)
=======================

- CodeIgniter 3.0.4


Changes 3.0.5 (3505...)
=======================

CHANGED:
- log_login changed to log_activity
- log_activity logs all database,media,auth and email activity
- homescreen changed to statistics


Changes 3.0.5 (3501...)
=======================

CHANGED:
- API versimpeld, standaard format=json